prod/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-service
spec:
  ports:
  - port: 9000
    targetPort: 80
  selector:
    app: prod
